[package]
name = "c-bindings"
authors = ["Victoria Brekenfeld <git@drakulix.de>", "Alessandro Beltramo <github.com/ABeltramo>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Wayland Compositor producing GStreamer buffers"
rust-version = "1.72"

[lib]
name = "libgstwaylanddisplay"
path = "src/capi.rs"

[features]
capi = []

[dependencies]
gst.workspace = true
gst-video.workspace = true
tracing.workspace = true
wayland-display-core = { path = "../wayland-display-core" }
tracing-subscriber = "0.3"

[package.metadata.capi]
min_version = "0.9.21"

[package.metadata.capi.pkg_config]
requires = """
gstreamer-1.0, gstreamer-base-1.0, wayland-server
"""

[package.metadata.capi.header]
enabled = true