[package]
name = "wayland-display-core"
authors = ["Victoria Brekenfeld <git@drakulix.de>", "Alessandro Beltramo <github.com/ABeltramo>"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Wayland Compositor producing GStreamer buffers"
rust-version = "1.72"

[lib]
name = "waylanddisplaycore"
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[dependencies]
gst.workspace = true
gst-video.workspace = true
tracing.workspace = true
once_cell.workspace = true
wayland-backend = "0.3.3"
wayland-scanner = "0.31.1"

[dependencies.smithay]
git = "https://github.com/smithay/Smithay"
rev = "fe04633"
default-features = false
features = [
    "backend_drm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "renderer_gl",
    "use_system_lib",
    "desktop",
    "wayland_frontend"
]
